--- a/style1.css
+++ b/style1.css
@@ -4,33 +4,76 @@
     box-sizing: border-box;
 }
 
-a{
-    color: white;
+body, html{
+    /* background-image: url("DSC_0938-min.jpg"); */
+    /* background-color: black; */
+    overflow: hidden;
+    height: 100%;
+    font-family: "Lato", sans-serif;
+    font-weight: 400;
+    line-height: 1.8em;
 }
-a:hover{
-    color: cornsilk;
+
+/* #mainImg{
+    z-index: -2;
+    position: absolute;
+    margin-top: -15%;
+    height: 111.5%;
+    width: 81%;
+} */
+
+.pimg1{
+    background-image: url("DSC_0938-min.jpg");
+    min-height: 60%;
+    z-index: -1;
+    position: absolute;
+    margin-top: -15%;
+    /* height: 111.5%; */
+    width: 100%;
+}
+
+ul li a:hover{
+    color :rgb(102, 224, 240);
 }
 
 nav{
+    /* z-index: 1;
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-    min-height: 8vh;
+    justify-content: space-between; */
+    opacity: .5;
     background-color: rgb(161, 156, 156);
+    min-height: 8vh;
+    /* align-items: center;
     font-family: monospace;
     padding-left: 10%;
-    padding-right: 10%;
+    padding-right: 10%; */
 }
 
 .logoImg{
     height: 10vh;
 }
 
+/* .navBack{
+    height: 50px;
+    background-color: rgb(161, 156, 156);
+    position: absolute;
+    z-index: 2;
+    padding-top: 4rem;
+}  supposed to be the background of nav but not working*/
+
 .navLinks{
     display: flex;
     justify-content: space-around;
     width: 40%;
+    min-height: 8vh;
+    font-family: monospace;
+    padding-right: 10%;
+    text-align:right;
+    margin-right: 0;
+    margin-left: auto;
+    margin-bottom: -140px;
 }
+
 .navLinks li{
     list-style: none;
 }
@@ -62,9 +105,6 @@ nav{
 }
 
 @media screen and (max-width:768px){
-    /* html { 
-        overflow-x: hidden; 
-    } */
     body{
         overflow-x: hidden;
     }
