--- a/style1.css
+++ b/style1.css
@@ -5,80 +5,65 @@
 }
 
 body, html{
-    /* background-image: url("DSC_0938-min.jpg"); */
-    /* background-color: black; */
-    overflow: hidden;
+    /* overflow: hidden; */
     height: 100%;
     font-family: "Lato", sans-serif;
     font-weight: 400;
     line-height: 1.8em;
 }
 
-/* #mainImg{
-    z-index: -2;
-    position: absolute;
-    margin-top: -15%;
-    height: 111.5%;
-    width: 81%;
-} */
-
 .pimg1{
     background-image: url("DSC_0938-min.jpg");
-    min-height: 60%;
+    /* min-height: 60%; */
     z-index: -1;
-    position: absolute;
     margin-top: -15%;
-    /* height: 111.5%; */
-    width: 100%;
+    height: 120vh;
+    width: 100vw;
+    background-attachment: fixed;
+    background-size: cover;
 }
 
 ul li a:hover{
-    color :rgb(102, 224, 240);
+    color :rgb(76, 0, 255);
 }
 
 nav{
-    /* z-index: 1;
+    z-index: 1;
     display: flex;
-    justify-content: space-between; */
+    justify-content: space-between;
     opacity: .5;
     background-color: rgb(161, 156, 156);
     min-height: 8vh;
-    /* align-items: center;
+    align-items: center;
     font-family: monospace;
     padding-left: 10%;
-    padding-right: 10%; */
+    padding-right: 10%;
 }
 
 .logoImg{
     height: 10vh;
+    padding-top: 10px;
 }
 
-/* .navBack{
-    height: 50px;
-    background-color: rgb(161, 156, 156);
-    position: absolute;
-    z-index: 2;
-    padding-top: 4rem;
-}  supposed to be the background of nav but not working*/
 
 .navLinks{
     display: flex;
     justify-content: space-around;
     width: 40%;
-    min-height: 8vh;
+    /*min-height: 8vh;
     font-family: monospace;
     padding-right: 10%;
     text-align:right;
     margin-right: 0;
     margin-left: auto;
-    margin-bottom: -140px;
+    margin-bottom: -140px; */
 }
 
 .navLinks li{
     list-style: none;
 }
 .navLinks a{
-    color: rgb(245, 241, 241);
+    color: rgb(0, 0, 0);
     text-decoration: none;
     letter-spacing: 3px;
     font-weight: bold;
