--- a/style1.css
+++ b/style1.css
@@ -5,7 +5,6 @@
 }
 
 body, html{
-    /* overflow: hidden; */
     height: 100%;
     font-family: "Lato", sans-serif;
     font-weight: 400;
@@ -15,7 +14,6 @@ body, html{
 
 .pimg1{
     background-image: url("DSC_0938-min.jpg");
-    /* min-height: 60%; */
     z-index: -1;
     margin-top: -15%;
     height: 120vh;
@@ -39,6 +37,8 @@ nav{
     font-family: monospace;
     padding-left: 10%;
     padding-right: 10%;
+    position: sticky;
+    top: 0;
 }
 
 .logoImg{
