--- a/style1.css
+++ b/style1.css
@@ -147,6 +147,9 @@ a:hover{
         font-size: 1.5vh;
         text-align: center;
     }
+    h1{
+        font-size: 20px;
+    }
     .navLinks{
         position: fixed;
         text-decoration: underline;
