--- a/style1.css
+++ b/style1.css
@@ -148,7 +148,7 @@ a:hover{
         text-align: center;
     }
     h1{
-        font-size: 20px;
+        font-size: 4vh;
     }
     .navLinks{
         position: fixed;
